test/libsolidity/syntaxTests/imports/name_clash_in_import_1.sol
==== Source: a ====
contract A {}
==== Source: b ====
import "a"; contract A {}
// ----
// DeclarationError: (b:12-25): Identifier already declared.
